kubernetes/service.yml
---
kind: Service
apiVersion: v1
metadata:
  name: rssbox
spec:
  selector:
    app: rssbox
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
