kubernetes/ingress-tls.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: rssbox
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    # update this:
    # - rssbox.example.com
    secretName: rssbox-tls
  rules:
  # update this:
  # - host: rssbox.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: rssbox
          servicePort: 8080
